// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/SqlOptimization/Detail render detail page 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization/overview/1234567"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回性能优化概览
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-abfbw3"
        >
          <h5
            class="ant-typography title-wrap"
          >
            SQL重写
          </h5>
          <div
            class="ant-row ant-row-center"
            style="margin-left: -10px; margin-right: -10px;"
          >
            <div
              class="ant-col ant-col-12"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-card ant-card-hoverable css-121p60i"
              >
                <div
                  class="ant-card-body"
                >
                  <header
                    class="card-header"
                  >
                    <div
                      class="title"
                    >
                      <div
                        class="title-cont"
                      >
                        原SQL
                      </div>
                    </div>
                    <div
                      class="extra"
                    >
                      <div
                        class="actiontech-copy-icon css-1s8kb8e"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </header>
                  <section
                    class="card-cont"
                  >
                    <pre
                      class="code-pre"
                    >
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        *
                      </span>
                       
                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       customer 
                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       c_custkey 
                      <span
                        class="hljs-keyword"
                      >
                        in
                      </span>
                       (
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       o_custkey 
                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       orders 
                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       O_ORDERDATE
                      <span
                        class="hljs-operator"
                      >
                        &gt;=
                      </span>
                      <span
                        class="hljs-built_in"
                      >
                        current_date
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        -
                      </span>
                       
                      <span
                        class="hljs-type"
                      >
                        interval
                      </span>
                       
                      <span
                        class="hljs-number"
                      >
                        1
                      </span>
                       
                      <span
                        class="hljs-keyword"
                      >
                        year
                      </span>
                      )
                    </pre>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-12"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-card ant-card-hoverable css-121p60i"
              >
                <div
                  class="ant-card-body"
                >
                  <header
                    class="card-header"
                  >
                    <div
                      class="title"
                    >
                      <div
                        class="title-cont"
                      >
                        重写后SQL
                      </div>
                    </div>
                    <div
                      class="extra"
                    >
                      <div
                        class="actiontech-copy-icon css-1s8kb8e"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </header>
                  <section
                    class="card-cont"
                  >
                    <pre
                      class="code-pre"
                    >
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        *
                      </span>
                      

                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       customer

                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       customer.c_custkey 
                      <span
                        class="hljs-keyword"
                      >
                        in
                      </span>
                       (
          
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       orders.o_custkey
          
                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       orders
          
                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       orders.O_ORDERDATE 
                      <span
                        class="hljs-operator"
                      >
                        &gt;=
                      </span>
                       
                      <span
                        class="hljs-built_in"
                      >
                        current_date
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        -
                      </span>
                       
                      <span
                        class="hljs-type"
                      >
                        interval
                      </span>
                       
                      <span
                        class="hljs-string"
                      >
                        '1'
                      </span>
                       
                      <span
                        class="hljs-keyword"
                      >
                        YEAR
                      </span>
                      
          )

                    </pre>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <section>
            <h5
              class="ant-typography title-wrap"
            >
              本次重写优化应用的规则
            </h5>
            <section
              class="css-oyyzvz"
            >
              <a
                class="ant-typography rule-name"
                href="/sqle/rule/knowledge/RuleInSubqueryRewrite/MySQL"
                rel="noopener noreferrer"
                target="_blank"
              >
                IN子查询优化
              </a>
              <section
                class="css-1m486f3"
              >
                <div
                  class="actiontech-sql-snippet-renderer-wrapper css-q962ee"
                >
                  <div
                    class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
                  >
                    <span>
                      customer.c_custkey 
                      <span
                        class="hljs-keyword"
                      >
                        in
                      </span>
                       ( 
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       orders.o_custkey 
                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       orders 
                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       orders.O_ORDERDATE 
                      <span
                        class="hljs-operator"
                      >
                        &gt;=
                      </span>
                       
                      <span
                        class="hljs-built_in"
                      >
                        current_date
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        -
                      </span>
                       
                      <span
                        class="hljs-type"
                      >
                        interval
                      </span>
                       
                      <span
                        class="hljs-string"
                      >
                        '1'
                      </span>
                       
                      <span
                        class="hljs-keyword"
                      >
                        YEAR
                      </span>
                       )
                    </span>
                  </div>
                  <div
                    class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                  >
                    <span
                      aria-label="copy"
                      class="anticon anticon-copy"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="copy"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </section>
            </section>
          </section>
          <h5
            class="ant-typography title-wrap"
          >
            推荐索引
          </h5>
          <section
            class="css-1m486f3"
          >
            <div
              class="actiontech-sql-snippet-renderer-wrapper css-q962ee"
            >
              <div
                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
              >
                <span>
                  <span
                    class="hljs-keyword"
                  >
                    CREATE
                  </span>
                   INDEX PAWSQL_IDX1327276661 
                  <span
                    class="hljs-keyword"
                  >
                    ON
                  </span>
                   optimization.orders(o_custkey,o_orderdate);
                </span>
              </div>
              <div
                class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
              >
                <span
                  aria-label="copy"
                  class="anticon anticon-copy"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </section>
          <h5
            class="ant-typography title-wrap"
          >
            性能提升
          </h5>
          <section
            class="css-1m486f3"
          >
            <span
              class="ant-typography"
            >
              本次优化实施后，预计本SQL的性能将提升
              <span
                class="ant-typography ant-typography-success"
              >
                23
                %
              </span>
            </span>
          </section>
          <h5
            class="ant-typography title-wrap"
          >
            执行计划(优化前)
          </h5>
          <section
            class="css-1r0fjn5"
          >
            <span
              class="copy-icon"
            >
              <div
                class="actiontech-copy-icon css-1s8kb8e"
              >
                <span
                  aria-label="copy"
                  class="anticon anticon-copy"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </span>
              </div>
            </span>
            <pre
              class="code-wrapper"
            >
              <span
                class="hljs-operator"
              >
                -
              </span>
              <span
                class="hljs-operator"
              >
                &gt;
              </span>
               Nested loop 
              <span
                class="hljs-keyword"
              >
                inner
              </span>
               
              <span
                class="hljs-keyword"
              >
                join
              </span>
                (cost
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0.55
              </span>
               
              <span
                class="hljs-keyword"
              >
                rows
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                1
              </span>
              ) (actual 
              <span
                class="hljs-type"
              >
                time
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0.0375
              </span>
              .
              <span
                class="hljs-number"
              >
                .0
              </span>
              <span
                class="hljs-number"
              >
                .0375
              </span>
               
              <span
                class="hljs-keyword"
              >
                rows
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0
              </span>
               loops
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                1
              </span>
              )
            </pre>
          </section>
          <h5
            class="ant-typography title-wrap"
          >
            执行计划(优化后)
          </h5>
          <section
            class="css-1r0fjn5"
          >
            <span
              class="copy-icon"
            >
              <div
                class="actiontech-copy-icon css-1s8kb8e"
              >
                <span
                  aria-label="copy"
                  class="anticon anticon-copy"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </span>
              </div>
            </span>
            <pre
              class="code-wrapper"
            >
              <span
                class="hljs-operator"
              >
                -
              </span>
              <span
                class="hljs-operator"
              >
                &gt;
              </span>
               Nested loop 
              <span
                class="hljs-keyword"
              >
                inner
              </span>
               
              <span
                class="hljs-keyword"
              >
                join
              </span>
                (cost
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                1.1
              </span>
               
              <span
                class="hljs-keyword"
              >
                rows
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                3
              </span>
              ) (actual 
              <span
                class="hljs-type"
              >
                time
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0.0306
              </span>
              .
              <span
                class="hljs-number"
              >
                .0
              </span>
              <span
                class="hljs-number"
              >
                .0306
              </span>
               
              <span
                class="hljs-keyword"
              >
                rows
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0
              </span>
               loops
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                1
              </span>
              )
            </pre>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Detail render detail page when optimized sql is empty 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization/overview/1234567"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回性能优化概览
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-abfbw3"
        >
          <h5
            class="ant-typography title-wrap"
          >
            SQL重写
          </h5>
          <div
            class="ant-row ant-row-center"
            style="margin-left: -10px; margin-right: -10px;"
          >
            <div
              class="ant-col ant-col-24"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-card ant-card-hoverable css-121p60i"
              >
                <div
                  class="ant-card-body"
                >
                  <header
                    class="card-header"
                  >
                    <div
                      class="title"
                    >
                      <div
                        class="title-cont"
                      >
                        原SQL
                      </div>
                    </div>
                    <div
                      class="extra"
                    >
                      <div
                        class="actiontech-copy-icon css-1s8kb8e"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </header>
                  <section
                    class="card-cont"
                  >
                    <pre
                      class="code-pre"
                    />
                  </section>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap"
          >
            推荐索引
          </h5>
          <section
            class="css-1m486f3"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <span
                  class="ant-typography"
                >
                  暂无需要优化的索引
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <svg
                  height="18"
                  viewBox="0 0 1024 1024"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
                    fill="#FF7043"
                  />
                </svg>
              </div>
            </div>
          </section>
          <h5
            class="ant-typography title-wrap"
          >
            性能提升
          </h5>
          <section
            class="css-1m486f3"
          >
            <span
              class="ant-typography"
            >
              本次优化实施后，预计本SQL的性能将提升
              <span
                class="ant-typography ant-typography-success"
              >
                0
                %
              </span>
            </span>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Detail render detail page when params empty 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization/overview/1234567"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回性能优化概览
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-abfbw3"
        >
          <h5
            class="ant-typography title-wrap"
          >
            SQL重写
          </h5>
          <div
            class="ant-row ant-row-center"
            style="margin-left: -10px; margin-right: -10px;"
          >
            <div
              class="ant-col ant-col-24"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-card ant-card-hoverable css-121p60i"
              >
                <div
                  class="ant-card-body"
                >
                  <header
                    class="card-header"
                  >
                    <div
                      class="title"
                    >
                      <div
                        class="title-cont"
                      >
                        原SQL
                      </div>
                    </div>
                    <div
                      class="extra"
                    >
                      <div
                        class="actiontech-copy-icon css-1s8kb8e"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </header>
                  <section
                    class="card-cont"
                  >
                    <pre
                      class="code-pre"
                    />
                  </section>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap"
          >
            推荐索引
          </h5>
          <section
            class="css-1m486f3"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <span
                  class="ant-typography"
                >
                  暂无需要优化的索引
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <svg
                  height="18"
                  viewBox="0 0 1024 1024"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
                    fill="#FF7043"
                  />
                </svg>
              </div>
            </div>
          </section>
          <h5
            class="ant-typography title-wrap"
          >
            性能提升
          </h5>
          <section
            class="css-1m486f3"
          >
            <span
              class="ant-typography"
            >
              本次优化实施后，预计本SQL的性能将提升
              <span
                class="ant-typography ant-typography-success"
              >
                0
                %
              </span>
            </span>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;
